busca por telefone e melhorias